# openwrt-uci

./: Cargo.toml  README.md
.github/workflows/: openwrt-uci.yml
.reuse/: dep5
LICENSES/: MIT.txt
src/: lib.rs  parser.rs  writer.rs
